# runreceipt

./: .gitignore  README.md  pyproject.toml
runreceipt/: __main__.py  capture.py  cli.py  diff_receipts.py  env_diff.py  git_info.py  paths.py  receipt.py  show.py  sign.py
tests/: test_diff_receipts.py  test_env_diff.py  test_show.py  test_sign.py
tmp/: README.md
